[gd_scene load_steps=20 format=4 uid="uid://c7jm2yuaacdqh"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_u65tx"]
[ext_resource type="Texture2D" uid="uid://c2pfd8k5ikndt" path="res://assets/UI/Banners/Banner_Connection_Right.png" id="2_lrisn"]
[ext_resource type="Texture2D" uid="uid://da1rriwobwxrp" path="res://assets/UI/Banners/Carved_3Slides.png" id="3_ssaql"]
[ext_resource type="FontFile" uid="uid://i2wscuyqlt4s" path="res://assets/Effects/Fire/BigBlueTerm437NerdFont-Regular.ttf" id="3_yxomu"]
[ext_resource type="Texture2D" uid="uid://ct55kxl11vdmq" path="res://assets/UI/Banners/Carved_9Slides.png" id="4_ppwi5"]
[ext_resource type="Texture2D" uid="uid://b70u2cvxj8nx4" path="res://assets/Resources/Resources/G_Idle_(NoShadow).png" id="4_rchlv"]
[ext_resource type="Texture2D" uid="uid://by3xygwku58v" path="res://assets/UI/Banners/Carved_Regular.png" id="5_erodh"]
[ext_resource type="Texture2D" uid="uid://b84nidbah2262" path="res://assets/Resources/Resources/M_Idle.png" id="5_ub4xh"]
[ext_resource type="Texture2D" uid="uid://c8rwasm7d80ln" path="res://assets/Resources/Resources/W_Idle.png" id="6_j0uyu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1mkxp"]
texture = ExtResource("2_lrisn")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:1/0 = 0
2:0/0 = 0
1:0/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_pp7r8"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_1mkxp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bg7vs"]
texture = ExtResource("3_ssaql")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f6ea0"]
texture = ExtResource("4_ppwi5")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ased"]
texture = ExtResource("5_erodh")
texture_region_size = Vector2i(64, 64)

[sub_resource type="TileSet" id="TileSet_8w510"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_bg7vs")
sources/1 = SubResource("TileSetAtlasSource_f6ea0")
sources/2 = SubResource("TileSetAtlasSource_0ased")

[sub_resource type="LabelSettings" id="LabelSettings_upnkv"]
font = ExtResource("3_yxomu")
font_size = 48
font_color = Color(0.243137, 0.52549, 0.596078, 1)
shadow_color = Color(0.0862745, 0.109804, 0.180392, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_1aapl"]
font = ExtResource("3_yxomu")
outline_size = 8
outline_color = Color(0.306017, 0.305986, 0.225674, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.27451)

[sub_resource type="LabelSettings" id="LabelSettings_k06lt"]
font = ExtResource("3_yxomu")
font_size = 24
font_color = Color(1, 1, 1, 0.705882)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ljbo2"]
line_spacing = 4.0
font = ExtResource("3_yxomu")
font_size = 24
font_color = Color(0, 0, 0, 0.737255)

[node name="Hud" type="Control" groups=["hud"]]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u65tx")

[node name="HP" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 38.0
offset_right = 58.0
offset_bottom = 78.0
scale = Vector2(0.75, 0.75)
expand_mode = 2
stretch_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="HP"]

[node name="banner" type="TileMapLayer" parent="HP"]
tile_map_data = PackedByteArray("AAAAAAIAAAAAAAIAAAABAAIAAAABAAIAAAACAAIAAAABAAIAAAADAAIAAAABAAIAAAAEAAIAAAACAAIAAAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAACAAAAAAAAAAEAAAAAAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAACAAEAAAA=")
tile_set = SubResource("TileSet_pp7r8")

[node name="TileMapLayer" type="TileMapLayer" parent="HP"]
position = Vector2(-24, -50.6667)
scale = Vector2(1.33333, 1.33333)
tile_set = SubResource("TileSet_8w510")

[node name="HpLabel" type="Label" parent="HP"]
layout_mode = 0
offset_left = 74.0
offset_top = 73.0
offset_right = 236.0
offset_bottom = 124.0
text = "❤️ 3"
label_settings = SubResource("LabelSettings_upnkv")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 193.0
offset_right = 190.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("3_yxomu")
theme_override_font_sizes/font_size = 16
text = "increase hp"

[node name="Button2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 240.0
offset_right = 190.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("3_yxomu")
theme_override_font_sizes/font_size = 16
text = "decrease hp"

[node name="Button3" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 290.0
offset_right = 190.0
offset_bottom = 330.0
theme_override_fonts/font = ExtResource("3_yxomu")
theme_override_font_sizes/font_size = 16
text = "add meat"

[node name="gold" type="Sprite2D" parent="."]
position = Vector2(770, 103)
texture = ExtResource("4_rchlv")

[node name="Label" type="Label" parent="gold"]
offset_left = -53.0
offset_top = -19.0
offset_right = -13.0
offset_bottom = 5.0
text = "3x"
label_settings = SubResource("LabelSettings_1aapl")
horizontal_alignment = 2

[node name="meat" type="Sprite2D" parent="."]
position = Vector2(920, 103)
texture = ExtResource("5_ub4xh")

[node name="Label" type="Label" parent="meat"]
offset_left = -53.0
offset_top = -19.0
offset_right = -13.0
offset_bottom = 5.0
text = "3x"
label_settings = SubResource("LabelSettings_1aapl")
horizontal_alignment = 2

[node name="wood" type="Sprite2D" parent="."]
position = Vector2(1070, 102)
texture = ExtResource("6_j0uyu")
offset = Vector2(0, -6)

[node name="Label" type="Label" parent="wood"]
offset_left = -53.0
offset_top = -19.0
offset_right = -13.0
offset_bottom = 5.0
text = "3x"
label_settings = SubResource("LabelSettings_1aapl")
horizontal_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 472.0
offset_right = 1148.0
offset_bottom = 593.0
grow_horizontal = 0
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "esta é a mensagem
"
label_settings = SubResource("LabelSettings_k06lt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CenterContainer/MessageLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0627451)

[node name="KeyBindingsLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 373.0
offset_top = 52.0
offset_right = 725.0
offset_bottom = 188.0
scale = Vector2(0.8, 0.8)
text = "Comandos:
[Esc]: Pausa
Z: Ataca
X: Construir torre
C: Comer carne"
label_settings = SubResource("LabelSettings_ljbo2")
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
